--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,8 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+/.idea/
+.idea/misc.xml
+.idea/modules.xml
+.idea/pic2excel.iml
+.idea/vcs.xml
